<resources>
    <string name="app_name">Pokemon Catchers Catalogue</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_of_logo">Image of logo</string>
    <string name="picture_of_card">Picture of card</string>
    <string name="image_of_card">Image of card</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="textview">TextView</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="sets">Sets</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="take_picture">Take Picture</string>
    <string name="turn_on_custom_image">Turn on Custom Image</string>
    <string name="find_by_username">Find by Username...</string>
    <string name="add">Add</string>
    <string name="sort_method">Sort Method</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="update">Update</string>
    <string name="view_collection">View Collection</string>
    <string name="stats">Stats</string>
    <string name="repeats">Repeats</string>
    <string name="total_cards">Total Cards Owned</string>
    <string name="rares">Rares</string>
    <string name="uncommons">Uncommons</string>
    <string name="commons">Commons</string>
    <string name="other">Other</string>
    <string name="unique_cards">Unique Cards</string>
    <string name="missing_cards">Missing Cards</string>
    <string name="image_of_symbol">image of symbol</string>
    <string name="search">Search</string>
    <string name="search_for_a_card">Search for a card!</string>
    <string name="pokemon_catcher_s_catalogue">Pokemon Catcher\'s Catalogue</string>
    <string name="series_name">Series Name</string>
    <string name="revert_to_personal_collection">Revert to Personal Collection</string>
    <string name="enter_your_bio">Enter your bio!</string>
    <string name="new_deck">New deck</string>
    <string name="image_of_deck_cover">Image of deck cover</string>
    <string name="no_account_yet_click_here_to_make_one">No account yet? Click here to make one!</string>
    <string name="tcg_image">TCG image</string>
    <string name="app_title">App title</string>
    <string name="password_confirmation">password confirmation</string>
    <string name="already_a_member_login_here">Already a member? Login here</string>
    <string name="scroll_mode">Scroll Mode</string>
    <string name="save_deck">Save Deck</string>
    <string name="deck_count">0/60 Cards</string>
    <string name="pokeball">pokeball</string>
    <string name="no_decks_to_show">No decks to show...</string>
    <string name="delete_deck">Delete Deck</string>
    <string name="no_cards_placed_in_deck_yet">No cards placed in deck yet...</string>
    <string name="no_cards_to_show">No cards to show...</string>
    <string name="deck_name">Deck Name</string>
</resources>