<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/sets"
            android:title="@string/sets" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_fifth_fragment"
            android:icon="@drawable/build"
            android:title="Deck Builder" />
    </group>
</menu>