<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlNewDeck"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewDeckActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDeckCards"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/rvUserCards"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/ivDeckLogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:transitionName="@string/tcg_image"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/ivProfileDeck"
        android:contentDescription="@string/image_of_logo"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserCards"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/ivDeckLogo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivDeckLogo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/scroll_mode" />

    <Button
        android:id="@+id/btnSaveDeck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivDeckLogo"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/save_deck" />

    <ImageView
        android:id="@+id/ivProfileDeck"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/profile_pic"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etDeckName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivDeckLogo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/switch1"
        android:layout_toEndOf="@+id/btnSaveDeck"
        android:ems="10"
        android:hint="@string/deck_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvNoCards1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="291dp"
        android:text="@string/no_cards_to_show" />

</RelativeLayout>