<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleSetActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnEditToggle"
        android:layout_marginTop="10dp" />

    <ToggleButton
        android:id="@+id/btnEditToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEditMode"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/toggleButton" />

    <TextView
        android:id="@+id/tvEditMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/edit_mode" />

    <Spinner
        android:id="@+id/spinnerSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rvCards"
        android:entries="@array/sort_array"
        android:prompt="@string/sort_method"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/btnEditToggle" />
</RelativeLayout>