<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="fragments.ProfileFragment">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:text="@string/logout" />

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#000000"
        android:padding="1dp"
        android:contentDescription="@string/profile_pic"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:layout_toStartOf="@+id/ivProfile"
        android:textSize="30sp"
        tools:text="Username" />

    <EditText
        android:id="@+id/tvBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Bio"
        android:hint="@string/enter_your_bio"
        android:maxLines="5"
        android:textSize="30sp"
        tools:text="This is a bio!"
        android:inputType="text|textMultiLine" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBio"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textAllCaps="false"
        android:text="@string/update" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/ivProfile"
        android:layout_alignBottom="@+id/ivProfile"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:textAllCaps="false"
        android:background="#4ACD2D"
        android:foreground="@android:drawable/ic_menu_camera" tools:targetApi="m" />

    <Button
        android:id="@+id/btnRevert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:text="@string/revert_to_personal_collection" />
</RelativeLayout>