<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetStatistics">

    <ProgressBar
        android:id="@+id/pbSetStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivSymbol"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvMissing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOther"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/missing_cards"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCommons"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/other"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvUncommons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRares"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/uncommons"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvCommons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUncommons"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/commons"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvRares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUniqueCards"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/rares"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvSetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/ivSetLogo"
        android:textSize="40sp"
        tools:text="SET NAME" />

    <ImageView
        android:id="@+id/ivSetLogo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        tools:srcCompat="@tools:sample/avatars"
        android:transitionName="@string/image_of_logo"
        android:contentDescription="@string/image_of_logo" />

    <TextView
        android:id="@+id/tvTotalCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivSetLogo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/total_cards"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvTotalCards2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivSetLogo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        tools:text="88" />

    <TextView
        android:id="@+id/tvRepeats2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTotalCards2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        tools:text="32" />

    <TextView
        android:id="@+id/tvUniqueCards2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRepeats2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        tools:text="120/125" />

    <TextView
        android:id="@+id/tvRares2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUniqueCards2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        tools:text="15/42" />

    <TextView
        android:id="@+id/tvUncommons2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRares2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        tools:text="34/50" />

    <TextView
        android:id="@+id/tvCommons2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUncommons2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        tools:text="30/30" />

    <TextView
        android:id="@+id/tvOther2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCommons2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        tools:text="3/3" />

    <TextView
        android:id="@+id/tvRepeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTotalCards"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/repeats"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvUniqueCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRepeats"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/unique_cards"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/ivSymbol"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/image_of_symbol" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rlCards"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMissing"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/ivSymbol" />
</RelativeLayout>